[package]
name = "devhost"
version = "0.1.0"
edition = "2021"
description = "Local development hostname router"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "server", "tokio"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
